apps/geoview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoview
  namespace: geoview
  labels:
    app: geoview
    app.kubernetes.io/name: geoview
    app.kubernetes.io/part-of: geoview-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: geoview
